2_JS/7_Bootstrap/3_PokeDex/style.css
/* LOADING ANIMATION CSS */

.loadingScreen1 {
    width: 50vw;
    background-color: lightblue;
    min-height: 100vh;
    position: fixed;
    z-index: 2;
    border-right: solid 4px rgba(255, 255, 255, 0.2);
    box-sizing: border-box;
    animation-name: loadHideContentLeft;
    animation-duration: 3s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
}
.loadingScreen2 {
    width: 50vw;
    background-color: lightblue;
    min-height: 100vh;
    position: fixed;
    right: 0;
    z-index: 2;
    border-left: solid 4px rgba(255, 255, 255, 0.2);
    box-sizing: border-box;
    animation-name: loadHideContentRight;
    animation-duration: 3s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
    
}
.loadingObject2 { /* PokeBall */
    position: relative;
    height: 25px;
    width: 50px;
    background-color: red;
    border-radius: 50px 50px 0 0 ;
    box-shadow: 0 4px 0 #292b2c;
    z-index: 2;
    
}
.loadingObject1 { /* PokeBall */
    height: 25px;
    width: 50px;
    background-color: white;
    border-radius: 0 0 50px 50px;
}
.loadingObject3 { /* PokeBall */
    position: absolute;
    height: 12px;
    width: 12px;
    left: 19px;
    top: 20px;
    background-color: white;
    border-radius: 6px;
    box-shadow: 0 0 0 4px #292b2c;
    z-index: 1000;
}
.pokebola {
    overflow: hidden;
    border-radius: 100%;
    position: fixed;
    left: 50%;
    margin-left: -31px;
    top: 50%;
    margin-top: -25px;
    z-index: 1000;
    animation-name: pokeBig;
    animation-duration: 3s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
    box-sizing: border-box;
}
@keyframes pokeBig {
    0% {
        transform: scale(1,1);
    }
    10% {
        transform: scale(1.5,1.5);
    }
    20% {
        transform: scale(1,1);
    }
    30% {
        transform: scale(1.5,1.5);
    }
    40% {
        transform: scale(1,1);
    }
    50% {
        transform: scale(1.5,1.5);
    }
    60% {
        transform: scale(1,1);
    }
    70% {
        transform: scale(1.5,1.5);
    }
    80% {
        transform: scale(1,1);
    }
    90% {
        transform: scale(0.5,0.5);
    }
    100% {
        transform: scale(0,0);
        
    }
}
@keyframes loadHideContentRight {
    0% {
        right: 0;
        border-left: solid 4px rgba(255, 255, 255, 0.2);
    }
    25% {
        right: 0;
        border-left: solid 4px rgba(255, 255, 255, 0.4);
    }
    50% {
        right: 0;
        border-left: solid 4px rgba(255, 255, 255, 0.6);
    }
    90% {
        right: 0;
        border-left: solid 4px rgba(255, 255, 255, 0.8);
    }
    100% {
        border-left: solid 4px rgba(255, 255, 255, 1);
        right: -50vw;
    }
}
@keyframes loadHideContentLeft {
    0% {
        left: 0;
        border-right: solid 4px rgba(255, 255, 255, 0.2);
    }
    25% {
        left: 0;
        border-right: solid 4px rgba(255, 255, 255, 0.4);
    }
    50% {
        left: 0;
        border-right: solid 4px rgba(255, 255, 255, 0.6);
    }
    90% {
        left: 0;
        border-right: solid 4px rgba(255, 255, 255, 0.8);
    }
    100% {
        border-right: solid 4px rgba(255, 255, 255, 1);
        left: -50vw;
    }
}

/* CSS ON ACTUAL PAGE */

.tipo-pokemon {
    min-width: 90%;
}
.clase-de-caja {
    opacity: 0;
    display: flex;
    flex-direction: row; 
    flex-wrap: wrap;
    position: relative;
    justify-content: center;
    animation-name: loadShowContent;
    animation-duration: 500ms;
    animation-delay: 1s;
    animation-fill-mode: forwards;
}

@keyframes loadShowContent {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

.pokemon-card {
    box-shadow: 0 0 0 1px #DFDFDF;
    border: none;
    overflow: hidden;
}

.pokemon-card:hover {
    box-shadow: 0 0 0 1px #DFDFDF, 0 0 5px 1px #292b2c9a;
}

.pokemon-name {
    display: inline-block;
    border-radius: 0px 0.9em 0.9em 0px;
    border-right: 1px solid #797D82;
    border-bottom: 1px solid #797D82;
    border-top: 1px solid #797D82;
    background-color: #fcfcfc;
    font-size: 0.8em;
    padding-top: 0.4em;
    padding-bottom: 0.4em;

}
.pokemon-num {
    display: inline-block;
    border-radius: 0.9em 0px 0px 0.9em;
    background-color: 	lightgray;
    border-left: 1px solid #797D82;
    border-bottom: 1px solid #797D82;
    border-top: 1px solid #797D82;
    font-size: 0.8em;
    padding-top: 0.4em;
    padding-bottom: 0.4em;

}
.tipo-pokemon {
    border-radius: 1em;
    font-size: 0.8em;
}

